# admin-dashboard

./: README.md
src/: index.html
src-alter/: index.html
src-tauri/: Cargo.toml  report.json  tauri.conf.json
src-tauri/src/: main.rs
